alignment bug test

--- a/portfolio/src/assets/base.css
+++ b/portfolio/src/assets/base.css
@@ -33,7 +33,7 @@
   --color-heading: var(--vt-c-text-light-1);
   --color-text: var(--vt-c-text-light-1);
 
-  --section-gap: 160px;
+  /* --section-gap: 160px; */
 }
 
 @media (prefers-color-scheme: dark) {
@@ -48,15 +48,6 @@
     --color-heading: var(--vt-c-text-dark-1);
     --color-text: var(--vt-c-text-dark-2);
   }
-}
-
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-  margin: 0;
-  position: relative;
-  font-weight: normal;
 }
 
 body {
